welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: identifier expected but '(' found.
def(bPas : Int, versLAvant: Boolean) {
   ^