welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def(bPas : Int, versLAvant: Boolean) {
  if (versLAvant == true) {
    for (i <- 1 to Int) {
      avance();
  }
  else(){
    recule();
  }
 }
}